# foxlator

./: README.md  pyproject.toml  test-requirements.txt
.github/workflows/: foxlator-pr-pipeline.yml  foxlator-release.yml
src/: foxlator.py  requirements.txt  sub_movie_generator.py  subtitles.py
src/foxlator/: __main__.py  sub_movie_generator.py
src/foxlator/utils/: checks.py
test/: test_sub_movie_generator.py  test_subtitles.py
