[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foxlator"
version = "0.1.0"
authors = [
  { name="Witold Haza", email="witold.haza@gmail.com" },
  { name="Kacper Czyz", email="kacper.czyz@protonmail.com" },
]
dependencies = [
    "foxlator_lib",
]
description = "Foxlator enables automatic subtitle generation based on the audio track and generates a new video file with the created subtitles"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ffmpeg-installed = "third_party.ffmpeg:check_ffmpeg_installed"
imagemagick-installed = "third_party.imagemagick:check_imagemagick_installed"

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/skyfox-ai/foxlator"
"Bug Tracker" = "https://github.com/skyfox-ai/foxlator/issues"
